--- a/app/src/main/res/layout/activity_first_question.xml
+++ b/app/src/main/res/layout/activity_first_question.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Здесь будет первый вопрос"
-            android:textSize="25dp"
+            android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:text="Первый ответ"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <RadioButton
             android:id="@+id/secondAnswerRB"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:text="Второй ответ"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <RadioButton
             android:id="@+id/thirdAnswerRB"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:text="Третий ответ"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
     </RadioGroup>
 
