--- a/app/src/main/res/layout/activity_third_question.xml
+++ b/app/src/main/res/layout/activity_third_question.xml
@@ -15,17 +15,17 @@
         tools:ignore="Miss,MissingConstraints" />
 
     <RadioGroup
-        android:id="@+id/firstAnswersGroupRG"
+        android:id="@+id/thirdAnswersGroupRG"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/toolbarThirdQuestion">
 
         <TextView
-            android:id="@+id/firstQuestionTV"
+            android:id="@+id/thirdQuestionTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Здесь будет третий вопрос"
+            android:text="@string/text_error"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="Первый ответ"
+            android:text="@string/text_error"
             android:textSize="20sp" />
 
         <RadioButton
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="Второй ответ"
+            android:text="@string/text_error"
             android:textSize="20sp" />
 
         <RadioButton
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="Третий ответ"
+            android:text="@string/text_error"
             android:textSize="20sp" />
 
     </RadioGroup>
