--- a/app/src/main/res/layout/activity_first_question.xml
+++ b/app/src/main/res/layout/activity_first_question.xml
@@ -25,7 +25,7 @@
             android:id="@+id/firstQuestionTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Здесь будет первый вопрос"
+            android:text="@string/text_error"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="Первый ответ"
+            android:text="@string/text_error"
             android:textSize="20sp" />
 
         <RadioButton
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="Второй ответ"
+            android:text="@string/text_error"
             android:textSize="20sp" />
 
         <RadioButton
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="Третий ответ"
+            android:text="@string/text_error"
             android:textSize="20sp" />
 
     </RadioGroup>
