--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -13,4 +13,50 @@
         android:layout_height="wrap_content"
         android:background="@color/toolbarColor"
         tools:ignore="Miss,MissingConstraints" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarResult">
+
+        <TextView
+            android:id="@+id/resultTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_error"
+            android:textSize="70sp" />
+
+        <TextView
+            android:id="@+id/resultCommentTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_error"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/resultInfoTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_error"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/restartBTN"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="@string/text_restart_BTN" />
+
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
