--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="toolbarColor">#2196F3</color>
+    <color name="red">#F32121</color>
+    <color name="green">#64F321</color>
+    <color name="blue">#2196F3</color>
+    <color name="yellow">#F3DB21</color>
 </resources>
